Scrolling with non-autogenerated page

--- a/Battleship/AndroidManifest.xml
+++ b/Battleship/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:name="info.ss12.battleship.SelectionActivity"
             android:label="@string/title_activity_selection" >
         </activity>
+        <activity
+            android:name="info.ss12.battleship.ScrollPage"
+            android:label="@string/title_activity_scroll_page" >
+        </activity>
     </application>
 
 </manifest>
